# blame

./: .gitignore  README.md  blame.py  pyproject.toml  setup.py
blame/: blame.py
