[project]
name = "blame"
version = "1.1"
description = "Handy git blame wrapper"
authors = [
    {name = "Micah Ferrill", email = "mcferrill@gmail.com"},
]
dependencies = [
    "pygments~=2.10",
    "docopt~=0.6",
    "termcolor~=1.1",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.scripts]
blame = 'blame:main'

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
